# easemydischarge

./: .gitignore  Dockerfile  README.md  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  data.py  environment.py
