[project]
name = "easemydischarge-pm-env"
version = "1.0.0"
description = "OpenEnv environment simulating Product Manager tasks for hospital discharge automation"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openai>=1.0",
    "httpx>=0.24",
]