[project]
name = "easemydischarge-pm-env"
version = "1.0.0"
description = "OpenEnv environment simulating Product Manager tasks for hospital discharge automation"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openai>=1.0",
    "httpx>=0.24",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"